[tool.poetry]
name = "fuse_in_memory"
version = "0.1.0"
description = "An in-memory encrypted file system using FUSE and AES-256-CFB"

[tool.poetry.dependencies]
python = "^3.10"
fusepy = "^3.0.1"
cryptography = "^42.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
